apps/hello-world/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app.kubernetes.io/name: hello-world
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-world
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-world
        app.kubernetes.io/version: 11f7fb4
    spec:
      automountServiceAccountToken: false
      containers:
        - name: hello-world
          image: harbor.apko.do-2021.fr/do4-2022/openstack-k0s-apko/hello-world:11f7fb4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "250m"
      securityContext:
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        allowPrivilegeEscalation: false
